fix: styled cta-banner elements (default and alignleft)

--- a/templates/blog/blog.css
+++ b/templates/blog/blog.css
@@ -1,10 +1,71 @@
+/**
+ * Blog mobile first
+ */
+
+/* Blog paragraph spacing */
+.blog p {
+    margin-top: 18px;
+    margin-bottom: 18px;
+}
+
+/* Blog-CTA-Banner */
+.blog .blog-cta-banner {
+    background-color: var(--sapProgress_Value_InformationBackground);
+    margin: 3rem auto;
+    padding: 2rem;
+}
+
+/* Blog-CTA-Banner elements: text and links */
+.blog .blog-cta-banner p,
+.blog .blog-cta-banner a {
+    color: var(--sapButton_Information_Active_TextColor);
+    font-family: var(--udexTypographyBodyMFontFamily);
+    font-size: var(--udexTypographyBodyMFontSize);
+    font-weight: var(--udexTypographyBodyMFontWeight);
+    line-height: var(--udexTypographyBodyMLineHeight);
+    margin-top: 0;
+}
+
+/* Blog-CTA-Banner elements: cta button sizing */
+.blog .blog-cta-banner p.button-container {
+    margin-top: 2rem;
+    margin-bottom: 0;
+}
+
+/* Blog-CTA-Banner elements: cta button (a element) */
+.blog .blog-cta-banner p.button-container a {
+    border: 1px solid var(--sapButton_Information_Active_TextColor);
+    border-radius: 0;
+    margin: 0;
+}
+
+/* Blog-CTA-Banner elements: cta button (active / hovered a element) */
+.blog .blog-cta-banner p.button-container a:active, .blog .blog-cta-banner p.button-container a:hover {
+    background-color: var(--sapButton_Information_Active_TextColor);
+    color: var(--sapProgress_Value_InformationBackground);
+    text-decoration: none;
+}
+
+/* Desktop view */
 @media (min-width: 900px) {
-    /* Blog: default section paragraphs */
-    body.blog div.default-content-wrapper p {
-        margin: 0 auto;
+    /* Blog: desktop view: text and cta-banner width constraint */
+    .blog div.default-content-wrapper p,
+    .blog div.blog-cta-banner-wrapper {
+        margin-left: auto;
+        margin-right: auto;
         padding-left: 180px;
         padding-right: 180px;
         width: 780px;
         max-width: 780px;
+    }
+
+    /* Blog: desktop view: cta-banner align left */
+    .blog .blog-cta-banner.alignleft {
+        float:left;
+        width: 370px;
+        margin-left: -92.5px;
+        margin-top: 0;
+        margin-right: 2rem;
+        margin-bottom: 3rem;
     }
 }
